objects/BMCServiceDesk__BMC_BaseElement__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__HotSwappable__c</fullName>
        <label>Hot Swappable</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ICCID__c</fullName>
        <description>Stores the Integrated Circuit Card ID (ICCID) number, which is a unique identifier for the SIM card used in a mobile device.</description>
        <inlineHelpText>Specify a valid 19-digit ICCID number.</inlineHelpText>
        <label>ICCID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IMEI__c</fullName>
        <description>Stores the International Mobile Equipment Identity (IMEI) number, which is the unique identifier of a mobile device and is typically displayed on the phone’s back cover or under the battery.</description>
        <inlineHelpText>Specify a valid 15-digit IMEI number.</inlineHelpText>
        <label>IMEI</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ImpactComputationModel__c</fullName>
        <label>ImpactComputationModel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Infrastructure_Instance_Type__c</fullName>
        <label>Infrastructure Instance Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InputCurrent__c</fullName>
        <label>Input Current</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InputVoltage__c</fullName>
        <label>Input Voltage</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstallLocation__c</fullName>
        <label>Install Location</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstalledCPUs__c</fullName>
        <label>Installed CPUs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstalledCPs__c</fullName>
        <label>Installed CPs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstalledDASD__c</fullName>
        <label>Installed DASD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <inlineHelpText>This field is automatically set to the GUID that is generated as an Instance ID for the instance.</inlineHelpText>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceType__c</fullName>
        <formula>IF(NOT(ISBLANK(BMCServiceDesk__FKAssetRuleClass__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__FKAssetRuleClass__c)) &amp;&amp; NOT(ISBLANK(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; (BMCServiceDesk__DeleteStatusCode__c &lt;&gt; 1) &amp;&amp; (BMCServiceDesk__DeleteStatusCode__c &lt;&gt; 2),
					$Label.BMCServiceDesk__InstanceTypeFldLblCIandAsset,
					IF(NOT(ISBLANK(BMCServiceDesk__FKAssetRuleClass__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__FKAssetRuleClass__c)) &amp;&amp; NOT(ISBLANK(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; (BMCServiceDesk__DeleteStatusCode__c = 1),
						$Label.BMCServiceDesk__CMDB_TAB_CIs,
						IF(NOT(ISBLANK(BMCServiceDesk__FKAssetRuleClass__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__FKAssetRuleClass__c)) &amp;&amp; NOT(ISBLANK(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; (BMCServiceDesk__DeleteStatusCode__c = 2),
							$Label.BMCServiceDesk__CMDBAsset,
							IF(((ISBLANK(BMCServiceDesk__FKAssetRuleClass__c) || ISNULL(BMCServiceDesk__FKAssetRuleClass__c)) &amp;&amp; NOT(ISBLANK(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; (ISPICKVAL(BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__CMDBClassType__c,&apos;CI&apos;) || ISPICKVAL(BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__CMDBClassType__c,&apos;&apos;)) &amp;&amp; BMCServiceDesk__DeleteStatusCode__c &lt;&gt; 2),
								$Label.BMCServiceDesk__CMDB_TAB_CIs,
								IF(NOT(ISBLANK(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; (ISPICKVAL(BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__CMDBClassType__c,&apos;Asset&apos;)) &amp;&amp; (BMCServiceDesk__DeleteStatusCode__c &lt;&gt; 1),
									$Label.BMCServiceDesk__CMDBAsset, 
									IF(NOT(ISBLANK(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; (ISPICKVAL(BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__CMDBClassType__c,&apos;CI and Asset&apos;)) &amp;&amp; (BMCServiceDesk__DeleteStatusCode__c &lt;&gt; 1 &amp;&amp; BMCServiceDesk__DeleteStatusCode__c &lt;&gt; 2),
										$Label.BMCServiceDesk__InstanceTypeFldLblCIandAsset,
										IF(NOT(ISBLANK(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; (ISPICKVAL(BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__CMDBClassType__c,&apos;CI and Asset&apos;)) &amp;&amp; (BMCServiceDesk__DeleteStatusCode__c = 1),
											$Label.BMCServiceDesk__CMDB_TAB_CIs,
											IF(NOT(ISBLANK(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; (ISPICKVAL(BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__CMDBClassType__c,&apos;CI and Asset&apos;)) &amp;&amp; (BMCServiceDesk__DeleteStatusCode__c = 2),
												$Label.BMCServiceDesk__CMDBAsset, $Label.BMCServiceDesk__PSATNotApplicable
											)
										)
									)
								)
							)
						)
					)
				)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instance Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Integrity__c</fullName>
        <label>Integrity</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InterconnectAddress__c</fullName>
        <label>Interconnect Address</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Interconnect__c</fullName>
        <label>Interconnect</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InterfaceType__c</fullName>
        <label>Interface Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsVirtual__c</fullName>
        <inlineHelpText>Should be able to handle Null values too.</inlineHelpText>
        <label>Is Virtual</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Is_Category__c</fullName>
        <label>Is Category</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Is_Switching_Supply__c</fullName>
        <label>Is Switching Supply</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Is_System_Area__c</fullName>
        <label>Is System Area</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Item__c</fullName>
        <label>Item</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Keywords__c</fullName>
        <label>Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LANID__c</fullName>
        <label>LAN ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LUN_ID__c</fullName>
        <label>LUN ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LastModifiedByName__c</fullName>
        <formula>LastModifiedBy.FirstName + &apos;  &apos; + LastModifiedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is automatically set to the user who last modified the instance.</inlineHelpText>
        <label>Last Modified By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LastScanDate__c</fullName>
        <label>LastScanDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Last_Backup_Time__c</fullName>
        <label>Last Backup Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Latitude__c</fullName>
        <label>Latitude</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Launch_CI_Editor__c</fullName>
        <formula>HYPERLINK(&quot;/apex/BMCServiceDesk__CMDBManager?cmdbRecordId=&quot;+Id, BMCServiceDesk__Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Launch Instance Editor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Layout__c</fullName>
        <label>Layout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Level__c</fullName>
        <label>Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LicenseType__c</fullName>
        <label>License Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Server</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LicensesAvailable__c</fullName>
        <label>Licenses Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Link_Technology__c</fullName>
        <label>Link Technology</label>
        <picklist>
            <picklistValues>
                <fullName>Ethernet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Token Ring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frame Relay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueTooth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless LAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Locale__c</fullName>
        <label>Locale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Longitude__c</fullName>
        <label>Longitude</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Low_Water_Mark__c</fullName>
        <label>Low Water Mark</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MACAddress__c</fullName>
        <label>MAC Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MEID__c</fullName>
        <description>Mobile Equipment Identifier (MEID) number, which is the unique identifier of a mobile device and is typically displayed on the phone’s back cover or under the battery. CDMA operators use the MEID number to identify mobile devices.</description>
        <inlineHelpText>Specify a valid 14-digit hexadecimal MEID number.</inlineHelpText>
        <label>MEID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MailStop__c</fullName>
        <label>Mail Stop</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ManagementAddress__c</fullName>
        <label>Management Address</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ManufacturerName__c</fullName>
        <label>Manufacturer Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Manufacturer__c</fullName>
        <description>Stores the manufacturer that is defined in the selected model record. If a manufacturer is not defined in the selected model, this field displays the value from the Manufacturer Name field (data type: Text) in the Base Element object.</description>
        <formula>IF(OR( ISNULL(BMCServiceDesk__FKModel__r.BMCServiceDesk__Manufacturer__c),ISBLANK(BMCServiceDesk__FKModel__r.BMCServiceDesk__Manufacturer__c)),  BMCServiceDesk__ManufacturerName__c , BMCServiceDesk__FKModel__r.BMCServiceDesk__Manufacturer__c)</formula>
        <inlineHelpText>Automatically displays the manufacturer defined in the selected model. If a manufacturer is not defined, it displays the Manufacturer Name field value.</inlineHelpText>
        <label>Model Manufacturer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MarkAsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if you want to mark this instance as soft deleted. You can exclude it from searches and other activities by using the MarkAsDeleted attribute in your conditions. Additionally, you can preserve its relationships for future reuse.</inlineHelpText>
        <label>Mark As Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MarkingTechnology__c</fullName>
        <label>Marking Technology</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrophotographic LED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrophotographic Laser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrophotographic Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impact Moving Head Dot Matrix 9pin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impact Moving Head Dot Matrix 24pin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impact Moving Head Dot Matrix Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impact Moving Head Fully Formed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impact Band</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impact Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inkjet Aqueous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inkjet Solid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inkjet Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal Sensitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal Diffusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electroerosion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrostatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photographic Microfiche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photographic Imagesetter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photographic Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ion Deposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBeam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Typesetter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxBlockSize__c</fullName>
        <label>Maximum Block Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxClockSpeed__c</fullName>
        <label>Maximum Clock Speed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxConsumption__c</fullName>
        <label>Maximum Consumption</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxMediaSize__c</fullName>
        <label>Maximum Media Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxNumberOfNodes__c</fullName>
        <label>Maximum Number Of Nodes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxNumberOfProcesses__c</fullName>
        <label>Maximum Number Of Processes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxProcessMemorySize__c</fullName>
        <label>Maximum Process Memory Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Max_Component_Length__c</fullName>
        <label>Maximum Component Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Max_Consumable_Resource__c</fullName>
        <label>Maximum Consumable Resource</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Max_Speed__c</fullName>
        <label>Maximum Speed</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Maximum_Allowed__c</fullName>
        <label>Maximum Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MediaSupported__c</fullName>
        <label>Media Supported</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MediaType__c</fullName>
        <label>Media Type</label>
        <picklist>
            <picklistValues>
                <fullName>Removable media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed hard disk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MemoryType__c</fullName>
        <label>Memory Type</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>DRAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synchronous DRAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cache DRAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDRAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VRAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EEPROM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FEPROM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPROM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDRAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3DRAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SDRAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGRAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RDRAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MiddleName__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MinBlockSize__c</fullName>
        <label>Minimum Block Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Min_Consumable_Resource__c</fullName>
        <label>Minimum Consumable Resource</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MobilePhone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Model__c</fullName>
        <inlineHelpText>Use this field to enter the name by which the entity represented by the instance is generally known. For example, the model name of an Acme widget might be Pro Widget 2000.</inlineHelpText>
        <label>Model</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NameFormat__c</fullName>
        <label>NameFormat</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Name__c</fullName>
        <inlineHelpText>Use this field to enter a unique alphanumeric identifier that you want to assign to the instance.</inlineHelpText>
        <label>Instance Name</label>
        <length>254</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NetworkID__c</fullName>
        <label>Network ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Network_Addresses__c</fullName>
        <label>Network Addresses</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Network_Number__c</fullName>
        <label>Network Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Node_Descriptor__c</fullName>
        <label>Node Descriptor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Notes__c</fullName>
        <inlineHelpText>Use this field to enter general notes about the instance.</inlineHelpText>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NumberChannels__c</fullName>
        <label>Number Of Channels</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NumberOfCores__c</fullName>
        <label>Number Of Cores</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NumberOfLPARS__c</fullName>
        <label>Number Of LPARS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NumberOfLogicalProcessors__c</fullName>
        <label>Number Of Logical Processors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NumberOfMediaSupported__c</fullName>
        <label>Number Of Media Supported</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NumberOfSlots__c</fullName>
        <label>Number Of Slots</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NumberOfTrays__c</fullName>
        <label>Number Of Trays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Number_of_Blocks__c</fullName>
        <label>Number of Blocks</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Number_of_Buttons__c</fullName>
        <label>Number of Buttons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Number_of_Power_Cords__c</fullName>
        <label>Number of Power Cords</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OSLanguage__c</fullName>
        <label>OS Language</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OSProductSuite__c</fullName>
        <label>OS Product Suite</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Small Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BackOffice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminal Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Business (Restricted)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Embedded NT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Center</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>